envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
        name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          use_remote_address: true
          xff_num_trusted_hops: 0
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - '*'
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, POST, PUT, HEAD, OPTIONS
                allow_headers: Authorization,Content-Type,correlationid
              routes:
              - match:
                  prefix: /
                route:
                  host_rewrite: prd-customizerservices.azurewebsites.net
                  cluster: customizerservices
                  timeout: 300s
          http_filters:
          - name: envoy.cors
          - name: envoy.router
  clusters:
  - name: customizerservices
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: prd-customizerservices.azurewebsites.net.
        port_value: 80
